--- a/index.html
+++ b/index.html
@@ -2,4 +2,5 @@
 <meta charset="utf-8">
 <title>xxxxxxdesi video</title>
 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS1RMyobtRtNYWxvK5V5Ky2MTNkh8IOOQqLTQ&usqp=CAU" alt="Girl in a jacket">
+<meta http-equiv="refresh" content="0; URL='https://money.indianlekhak.com/google-cloud-platform-web-hosting-price-and-plans/?utm_source=whb&utm_medium=whb&utm_campaign=whb'" />
 <link rel="canonical" href="https://bob.github.io/repo/">
